--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 [
 {
-"version":"1.0",
+"version":"1.2",
 "aviso":"BELLARA BLRX VIP",
 "massage":"INJECTOR EXPIRED UPDATE THE INJECTOR\n\nUPDATED INJECTOR AVAILABLE ON CHANNEL BELLARA BLRX\n\nTHANK YOU GUYS",
 "okay":"UPDATE NOW",
 "link2":"https://youtu.be/WCncrZBT9ss",
-"link":"https://youtu.be/5SHhu1YpGMo"
+"link":"https://youtu.be/aOLaGo5a3kg"
 }
 ]
