--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 "massage":"INJECTOR EXPIRED UPDATE THE INJECTOR\n\nUPDATED INJECTOR AVAILABLE ON CHANNEL BELLARA BLRX\n\nTHANK YOU GUYS",
 "okay":"UPDATE NOW",
 "link2":"https://youtu.be/WCncrZBT9ss",
-"link":"https://youtu.be/CI322rGY6RU"
+"link":"https://youtu.be/ZKNvwocB1qU"
 }
 ]
